@@ -20,9 +20,12 @@ android {
         }
     }
     testOptions {
+
+        unitTests.returnDefaultValues = true
         unitTests {
             all {
                 maxHeapSize = "1024m"
+                jvmArgs '-XX:MaxPermSize=256m'
             }
         }
     }
@@ -42,12 +45,18 @@ dependencies {
     implementation 'com.google.firebase:firebase-storage:17.0.0'
     implementation 'com.squareup.retrofit2:retrofit:2.5.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
-    implementation 'com.miguelcatalan:materialsearchview:1.4.0'
     implementation 'com.github.bumptech.glide:glide:4.9.0'
 
     annotationProcessor 'com.github.bumptech.glide:compiler:4.9.0'
 
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.0'
+    // Core library
+    androidTestImplementation 'androidx.test:core:1.1.0'
+
+    // AndroidJUnitRunner and JUnit Rules
+    androidTestImplementation 'androidx.test:runner:1.2.0'
+    androidTestImplementation 'androidx.test:rules:1.1.1'
+
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    testImplementation 'junit:junit:4.12'
+
 }
